Fixed some spacing on the page and also added 404 error page

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -47,6 +47,22 @@ h3 {
     line-height: 1.3;
 }
 
+.page-not-found {
+    text-align: center;
+
+    &__404 {
+        font-size: var(--fs-900);
+    }
+
+    &__title {
+        margin-block-start: var(--space-2xs);
+    }
+    
+    & > * {
+        max-width: 100%;
+    }
+}
+
 
 
 // -----------------------------------------------------------------------------
@@ -134,6 +150,9 @@ h3 {
 
 .hero {
     --region-space: 6.6vmax;
+
+    position: relative;
+    overflow: clip;
     
     &__inner {
 
@@ -146,6 +165,15 @@ h3 {
         p {
             margin-block: 0 var(--space-xs);
         }
+    }
+
+    &__image {
+        position: absolute;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        opacity: .3;
     }
 }
 
@@ -345,6 +373,20 @@ h3 {
 // -----------------------------------------------------------------------------
 // Page: Footer
 // -----------------------------------------------------------------------------
+
+.sub-footer {
+    .grid {
+        --grid-min-col-size: 14rem;
+        --grid-gap: var(--space-s-l);
+
+        @media (width > 537px) {
+            .span-2 {
+                grid-column: span 2;
+            }
+        }
+    }
+}
+
 
 .site-footer {
     --region-space: var(--space-m) 3.3vmax;
